Fix bug z-index of setting panel. Fix bug click on setting button, sidebar is not showed when sidebar is hidden

--- a/src/less/keditor.less
+++ b/src/less/keditor.less
@@ -131,6 +131,7 @@ body.highlighted-container-content {
         > a {
             border-radius: @border-radius @border-radius 0 0;
             height: 42px;
+            padding: 10px 5px;
         }
 
         &.active {
@@ -182,7 +183,7 @@ body.highlighted-container-content {
 #keditor-setting-panel {
     background: #fff;
     position: absolute;
-    z-index: 2;
+    z-index: 1001;
     top: 10px;
     width: ~"calc(100% - 20px)";
     right: -100%;
